--- a/Brighter.AzureExtensions/Brighter.AzureExtensions.Functions/Brighter.AzureExtensions.Functions.csproj
+++ b/Brighter.AzureExtensions/Brighter.AzureExtensions.Functions/Brighter.AzureExtensions.Functions.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <VersionPrefix>0.3.0</VersionPrefix>
+    <VersionPrefix>0.7.0</VersionPrefix>
     <TargetFrameworks>net46</TargetFrameworks>
     <Authors>Daniel Stockhammer</Authors>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="Paramore.Brighter.CommandProcessor" Version="6.1.8" />
+    <PackageReference Include="Serilog" Version="2.4.0" />
     <PackageReference Include="WindowsAzure.ServiceBus" Version="3.4.6" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
