--- a/Core/packages.config
+++ b/Core/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="paramore.brighter.commandprocessor" version="6.1.8" targetFramework="net46" />
   <package id="Polly" version="4.1.2" targetFramework="net46" />
+  <package id="Serilog" version="2.4.0" targetFramework="net46" />
 </packages>
